2007-06-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([-titleDateFormatter]):
	removed useless method.

	* SoObjects/SOGo/SOGoDateFormatter.m: rewrote class to accept
	different configurable formats (long and short date + time).

	* SoObjects/SOGo/SOGoDateFormatter.[hm]: moved from UI/SOGoUI/.

	* SoObjects/Mailer/SOGoMailAccounts.m ([SOGoMailAccounts
	-isInternetRequest]): removed method.

	* SoObjects/SOGo/AgenorUserDefaults.m ([AgenorUserDefaults
	-jsonRepresentation]): new method with an explicit name.

	* UI/PreferencesUI/product.plist: new bundle that provides a web
	ui for handling user defaults.

	* UI/Scheduler/UIxTaskView.[hm]: removed unused module.

	* UI/Scheduler/UIxAppointmentView.[hm]: removed unused module.

	* SoObjects/SOGo/WOContext+Agenor.[hm]: removed unused module.

2007-06-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoLRUCache.m: removed unused module.

2007-06-13  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/NSArray+Scheduler.m ([NSArray
	-compareEventsAscending:otherEvent]): no longer use compare: on
	the time objects since one of them could be an NSNull, which
	crashes when comparing with anything.

	* UI/Scheduler/UIxCalListingActions.m ([UIxCalListingActions
	-eventsListAction]): sort events from here.
	([UIxCalListingActions -tasksListAction]): sort tasks from here.

	* SoObjects/SOGo/NSObject+AptComparison.[hm]: removed category
	module, replaced with NSArray+Scheduler in UI/SchedulerUI/.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFields:_fieldsfromFolder:_folderfrom:_startDateto:_endDatecomponent:_component]):
	no longer sort elements from here.

2007-06-12  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-aclsForUser:uid]): implemented method by forwarding the request
	to the container. This fixes a bug where users could no longer
	read emails from shared folders.
