@@ -1,5 +1,8 @@
 2007-06-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* UI/Common/UIxPageFrame.m ([UIxPageFrame
+	-relativePreferencesPath]): new method.
+
 	* UI/Scheduler/UIxComponentEditor.m ([-titleDateFormatter]):
 	removed useless method.
 
